# BeamLaser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.h.in
cmake/Modules/: FindGuile.cmake  FindSPRNG.cmake
doc/: CMakeLists.txt  doxyfile.in
examples/: BeamLaser.c  BeamLaserTLA.c  CMakeLists.txt  RabiOscillations.c  Superradiance.c
guile/: CMakeLists.txt  beam-laser.scm  bl_guile.c  bl_guile.scm
guile/tests/: CMakeLists.txt  test-ensemble.scm
include/: AtomFieldInteraction.h  BeamLaser.h  Diagnostics.h  DipoleOperator.h  Ensemble.h  Errors.h  FieldState.h  FieldUpdate.h  Integrator.h  ModeFunction.h  ParticleSource.h  Partition.h  PushUpdate.h  RingBuffer.h  SimulationState.h  Sink.h  Source.h  Update.h  Utilities.h
notes/: beamLaser.tex  plot_sr.py
notes/convergence/: convergence.py
notes/ptcl_source/: ptcl_source.py
notes/threshold/: field_intensities.py  inversion.py  polarizations.py  threshold.py
python/: README.rst  beamlaser.pyx  setup.py
src/: AtomFieldInteraction.c  CMakeLists.txt  Diagnostics.c  DipoleOperator.c  Ensemble.c  FieldUpdate.c  Integrator.c  ModeFunction.c  ParticleSource.c  Partition.c  PushUpdate.c  RingBuffer.c  Sink.c  Source.c  Update.c  Utilities.c  beamlaser.c  ensemble.c
tests/: CMakeLists.txt  testAddAll.c  testAtomFieldInteraction.c  testBSP.c  testBcast.c  testCreateParticle.c  testDiagnostics.c  testDipoleOperator.c  testDipoleOperatorTLA.c  testEnsemble.c  testFieldUpdate.c  testIntegrator.c  testManualParticleSource.c  testModeFunction.c  testParticleSource.c  testParticleSourceMPI.c  testPartition.c  testPoissonDist.c  testPushParticles.c  testRemoveParticles.c  testRingBuffer.c  testUpdate.c
utilities/: ConfigureBLGuileMPI.txt  get_cgreen.sh  get_guile.sh  get_mpich.sh  get_sprng.sh
